--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-hash-link": "^2.4.9",
     "@types/react-slick": "^0.23.13",
     "gsap": "^3.12.5",
+    "postcss-import": "^16.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
@@ -22,7 +23,10 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
-    "tsparticles": "^3.1.0"
+    "tailwind-styled-components": "^2.2.0",
+    "tsparticles": "^3.1.0",
+    "twin.macro": "^3.4.1",
+    "vite-plugin-babel-macros": "^1.0.6"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
@@ -31,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -42,7 +47,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-svgr": "^4.2.0"
